[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/battleship_base.png" type="Texture" id=1]
[ext_resource path="res://Main/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/SFX/laserShoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/SFX/propulsion.wav" type="AudioStream" id=4]
[ext_resource path="res://Main/Audio/FadingAudioPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Audio/SFX/hitHurt.wav" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="Animation" id=3]
resource_name = "GotHit"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1.2, 1, 1 ), Color( 1, 1.2, 1, 0 ), Color( 1, 1.2, 1, 1 ), Color( 1, 1.2, 1, 0 ), Color( 1, 1.2, 1, 1 ), Color( 1, 1.2, 1, 0 ), Color( 1, 1.2, 1, 1 ), Color( 1, 1.2, 1, 0 ), Color( 1, 1.2, 1, 1 ), Color( 1, 1.2, 1, 0 ), Color( 1, 1.2, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hit"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1.2, 1, 1 ), Color( 1, 1.2, 1, 0 ), Color( 1, 1.2, 1, 1 ), Color( 1, 1.2, 1, 0 ), Color( 1, 1.2, 1, 1 ), Color( 1, 1.2, 1, 0 ), Color( 1, 1.2, 1, 1 ), Color( 1, 1.2, 1, 0 ), Color( 1, 1.2, 1, 1 ), Color( 1, 1.2, 1, 0 ), Color( 1, 1.2, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="RigidBody2D" groups=[
"Player",
]]
collision_mask = 33
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
linear_damp = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1.2, 1, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -0.0359192, -17.3072, -16.0818, 16.6723, 15.538, 17.1442 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 0.23597, -17.2257 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GotHit = SubResource( 3 )
anims/Hit = SubResource( 2 )

[node name="TurretLoc" type="Node2D" parent="."]
position = Vector2( 0.23597, 4.95534 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="FadingAudioPlayer" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 4 )
transition_duration = 0.1

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
